NEW: Add endpoint to retrieve Pokemon by ID
